<resources>
    <string name="app_name">XGallery</string>
    <string name="slogan">Capture your moments</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="collections">Collections</string>
    <string name="newalbum">New Album</string>
    <string name="favorites">Favorites</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="on_device">On Device</string>
    <string name="album">Album</string>
    <string name="ask_delete_album">Are you sure to delete this album</string>
    <string name="title">Title</string>
    <string name="nothing_here">A friend to all is a friend to none</string>
    <string name="profile">Profile</string>
    <string name="upload_photos">Upload photos</string>
    <string name="password">Password</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="photo_view">Photo view</string>
    <string name="upload_channel_name">Upload notification</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="finished">Finished</string>
    <string name="more">More</string>
    <string name="blur">Blur</string>
    <string name="adjust">Adjust</string>
    <string name="filter">Filter</string>
    <string name="save">Save</string>
</resources>